Testing joining with the HTTP server on to wait for stop